--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,25 @@
 <h1>Make your form here</h1>
+
+<form method="POST" action="/pirates">
+<label for="pirate_name"> Pirate Name</label>
+<input type="text" id="pirate_name" name="pirate[name]">
+<label for="weight"> Weight</label>
+<input type="text" id="weight" name="pirate[weight]">
+<label for="height"> Height</label>
+<input type="text" id="height" name="pirate[height]">
+
+<label for="first_ship_name"> Ship Name</label>
+<input type="text" id="first_ship_name" name="pirate[ships][][name]">
+<label for="first_ship_type"> Type</label>
+<input type="text" id="first_ship_type" name="pirate[ships][][type]">
+<label for="first_ship_booty"> Booty</label>
+<input type="text" id="first_ship_booty" name="pirate[ships][][booty]">
+
+<label for="second_ship_name"> Ship Name</label>
+<input type="text" id="second_ship_name" name="pirate[ships][][name]">
+<label for="second_ship_type"> Type</label>
+<input type="text" id="second_ship_type" name="pirate[ships][][type]">
+<label for="second_ship_booty"> Booty</label>
+<input type="text" id="second_ship_booty" name="pirate[ships][][booty]">
+<input type="submit" value="Submit">
+</form>
