--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,4 +1,4 @@
-<h1>Make your form here</h1>
+<h1>New Pirate</h1>
 
 <form method="POST" action="/pirates">
 <label for="pirate_name"> Pirate Name</label>
@@ -8,18 +8,22 @@
 <label for="height"> Height</label>
 <input type="text" id="height" name="pirate[height]">
 
-<label for="first_ship_name"> Ship Name</label>
-<input type="text" id="first_ship_name" name="pirate[ships][][name]">
-<label for="first_ship_type"> Type</label>
-<input type="text" id="first_ship_type" name="pirate[ships][][type]">
-<label for="first_ship_booty"> Booty</label>
-<input type="text" id="first_ship_booty" name="pirate[ships][][booty]">
+<br>
 
-<label for="second_ship_name"> Ship Name</label>
-<input type="text" id="second_ship_name" name="pirate[ships][][name]">
-<label for="second_ship_type"> Type</label>
-<input type="text" id="second_ship_type" name="pirate[ships][][type]">
-<label for="second_ship_booty"> Booty</label>
-<input type="text" id="second_ship_booty" name="pirate[ships][][booty]">
+<label for="ship_name_1"> Ship Name</label>
+<input type="text" id="ship_name_1" name="pirate[ships][][name]">
+<label for="ship_type_1"> Type</label>
+<input type="text" id="ship_type_1" name="pirate[ships][][type]">
+<label for="ship_booty_1"> Booty</label>
+<input type="text" id="ship_booty_1" name="pirate[ships][][booty]">
+
+<br>
+
+<label for="ship_name_2"> Ship Name</label>
+<input type="text" id="ship_name_2" name="pirate[ships][][name]">
+<label for="ship_type_2"> Type</label>
+<input type="text" id="ship_type_2" name="pirate[ships][][type]">
+<label for="ship_booty_2"> Booty</label>
+<input type="text" id="ship_booty_2" name="pirate[ships][][booty]">
 <input type="submit" value="Submit">
 </form>
