--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,15 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate</h1>
+<p>
+Name: <%= @pirate.name%>
+Weight: <%= @pirate.weight%> lbs
+Height: <%= @pirate.height%> in
+</p>
 
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<p>
+<h2>Ships</h2>
+<% @ships.each do |ship|%>
+<%= ship.name%>
+<%= ship.type%>
+<%= ship.booty%>
+<%end%>
+</p>
